--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -12,8 +12,7 @@ concurrency:
 
 jobs:
   build:
-    name: ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
